--- a/languages/better-rest-api-featured-images.pot
+++ b/languages/better-rest-api-featured-images.pot
@@ -2,10 +2,10 @@
 # This file is distributed under the GPL-2.0+.
 msgid ""
 msgstr ""
-"Project-Id-Version: Better REST API Featured Images 1.1.1\n"
+"Project-Id-Version: Better REST API Featured Images 1.2.0\n"
 "Report-Msgid-Bugs-To: "
 "https://wordpress.org/support/plugin/better-rest-api-featured-images\n"
-"POT-Creation-Date: 2016-01-26 17:13:10+00:00\n"
+"POT-Creation-Date: 2016-02-15 17:05:00+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -24,8 +24,8 @@ msgstr ""
 
 #. Description of the plugin/theme
 msgid ""
-"Enhances the featured image data returned on the post object by the REST "
-"API to include urls for all available sizes and other useful image data."
+"Adds a top-level field with featured image data including available sizes "
+"and URLs to the post object returned by the REST API."
 msgstr ""
 
 #. Author of the plugin/theme
